# obd2_zephyr

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.MD  nrf52833dk_nrf52833.overlay  nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.overlay  prj.conf
default_bins/: firm-testv1.hex  obd_firmwae_adv_37_only_8db_aug17.hex  obd_firmware_log_toggle_aug17.hex
src/: main.c
src/app/: app_ble.c  app_ble.h  app_obd.c  app_uart.c  app_uart.h  common.h
src/ble/: ble_gatt.c  ble_gatt.h  bluetoothle.c  bluetoothle.h
src/driver/: hal.c  hal.h  hal_adc.c  hal_gpio.c  hal_i2c.c  hal_pwm.c  hal_uart.c  pwm.c
src/framework/: framework-app.c  framework-app.h
visual_files/: .qm_chart  qm_chart.qm
visual_files/src_trail/: zephyr.srctrlprj
